--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,6 +3,7 @@ html {
     
 }
 body {
+    font-family: 'Open Sans';
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -10,7 +11,6 @@ body {
 }
 
 #header {
-    font-family: 'Open Sans', sans-serif;
     display: flex; 
     background: #303030;
     flex: 1;
