--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -13,6 +13,9 @@
 
   <body id="body">
     <div id="header">
+      <a href="/1.29 Mingplosion.png" download>
+    <button>Download Image</button>
+      </a>
       <div class="button" id="home">Home</div>
       <div class="button" id="downloads">Downloads</div>
       <div class="button" id="about">About</div>
