--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -27,6 +27,6 @@
     <div id="map"></div>
     <div id="popup"></div>
     <div id="footer"></div>
-  <script src="../js/client.js"></script>
+  <script type="module" src="../js/client.js"></script>
   </body>
 </html>
