--- a/public/index.hbs
+++ b/public/index.hbs
@@ -21,8 +21,10 @@
         <img id="searchbarIcon" src="../img/search_icon.png" />
       </div>
     </div>
-    <div id="map"></div>
-    <div id="popup"></div>
+    <div id="mapParent">
+      <div id="map"></div>
+      <div id="popup"></div>
+    </div>
     <div id="footer"></div>
   <script src="../js/client.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
