Exported geojson to its own file

--- a/public/index.hbs
+++ b/public/index.hbs
@@ -28,7 +28,7 @@
     <div id="popup"></div>
     <div id="footer"></div>
 
-  <script src="../js/client.js"></script>
+  <script type="module" src="../js/client.js"></script>
   <!-- The core Firebase JS SDK is always required and must be listed first -->
   <script src="/__/firebase/7.12.0/firebase-app.js"></script>
 
