--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,8 +8,9 @@ body {
     font-family: 'Open Sans';
     display: flex;
     flex-direction: column;
-    height: 100%;
-    margin: 0;
+    height:100%;
+    padding:0;
+    margin:0;
 }
 
 #header {
@@ -30,10 +31,25 @@ body {
     flex: 1;
 }
 
+#searchForm {
+    display: table;
+    width:100%;
+    height:100%;
+}
+
+.searchTable {
+    display: table-cell;
+    padding-left: 5px;
+}
+
+.searchTable label {
+    color: white;
+}
+
 #searchbarIcon {
     height: 16px;
     width: 16px;
-    margin-left: 10px;
+    margin-right: 10px;
     cursor: pointer;
 }
 
@@ -46,19 +62,62 @@ body {
     border-radius: 2px;
     border: 1px solid #cfcfcf !important;
 }
+/* Styles for dropdown button that is covered by map
+.dropbtn {
+    background-color: #4CAF50;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
+  }
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content input {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  .dropdown-content input:hover {background-color: #ddd;}
+  .dropdown:hover .dropdown-content {display: block;}
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+*/
+
+#map-container {
+    position: relative;
+    height: 100%;
+    width:100%;
+    /*padding-left: 10px;
+    padding-right: 10px;
+    background: #303030;*/
+}
 
 #map {
-    flex: 12;
+    height: 100%;
+    width: 100%;
 }
 
 #footer {
     background: #000;
     flex: 1;
+    height: 7%;
 }
 
 #popup {
     background: #FFF;
     flex: 0;
+    height: 30%;
 }
 
 .showModal {
