--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,16 +25,20 @@ body {
 #searchbar {
     display: flex;
     align-items: center;
-    height: 60%;
     justify-self: stretch;
-    margin: 0 20px;
     flex: 1;
 }
 
-#searchForm {
-    display: table;
-    width:100%;
-    height:100%;
+#radioButtons {
+    display: flex;
+    height: 100%;
+    justify-self: center;
+    align-items: center;
+    margin: 0 20px 0 10px;
+}
+
+#radioButtons > label {
+    margin-right: 5px;
 }
 
 .searchTable {
@@ -49,18 +53,17 @@ body {
 #searchbarIcon {
     height: 16px;
     width: 16px;
-    margin-right: 10px;
+    margin-left: 16px;
     cursor: pointer;
 }
 
 #searchbarContent {
     font-size: 16px;
     padding: 0 5px;
-    height: 100%;
-    width: 100%;
     background: #f5f5f5;
     border-radius: 2px;
-    border: 1px solid #cfcfcf !important;
+    border: 1px solid #cfcfcf;
+    min-width: 400px;
 }
 /* Styles for dropdown button that is covered by map
 .dropbtn {
