Removed id search option

--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -27,16 +27,10 @@
         <div id="searchbar">
           <form id="Searchform" name="Search form">
             <div class="searchTable">
-              <input type="radio" name="radioButton" value="ID" checked>
-              <label for="ID">ID</label>
-              <input type="radio" name="radioButton" value="OI_KEY">
-              <label for="OI_KEY">OI_KEY</label>
-            </div>
-            <div class="searchTable">
               <img id="searchbarIcon" src="../img/search_icon.png" />
             </div>
             <div class="searchTable">
-              <input id="searchbarContent" placeholder="Search polygons"/>
+              <input id="searchbarContent" placeholder="Search polygons by OI KEY"/>
             </div>
           </form>
         </div>
