--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -94,26 +94,61 @@ body {
     border-radius: 15px;
 }
 
-.popup {
-    background: #FFF;
-    width: 95%;
+/* Popup */
+#popup {
     margin: auto;
-    margin-bottom: 1%;
+    padding: 10px;
+    width: calc(95% - 20px);
+    background: #FFF;
     border-radius: 15px;
     box-shadow: 0px 0px 10px;
-    padding-left: 0.5%;
-    padding-right: 0.5%;
     overflow-y: visible;
     overflow-x: auto;
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
-.popup table {
+#download_button {
+    display: block;
+    width: 140px;
+}
+
+#close-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    border-radius: 100%;
+    font-size: 20px;
+    padding: 4px;
+    top: 8px;
+    right: 8px;
+    height: 16px;
+    width: 16px;
+    font-weight: 700;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#close-button:hover {
+    color: #000;
+    background: #e0e0e0;
+}
+
+#plot1 {
+    margin: auto;
+    height: 500px;
+    width: 500px;
+}
+
+#popup table {
     border-collapse: collapse;
     border: 2px black solid;
     font: 12px sans-serif;
 }
 
-.popup td {
+#popup td {
     border: 1px black solid;
     padding: 5px;
 }
@@ -145,8 +180,6 @@ body {
     }
 }
 
-
-
 .button {
     padding: 10px;
     cursor: pointer;
@@ -162,4 +195,21 @@ body {
 
 .form-button {
     background: #303030;
+}
+
+#table-buttons { 
+    display: flex;
+    margin-bottom: 5px;
+}
+
+#table-buttons > div {
+    cursor: pointer;
+    padding: 4px;
+    border-radius: 4px;
+    border: 0.5px solid #303030;
+    margin-right: 5px;
+    transition: 0.3s;
+}
+#table-buttons > div:hover {
+    background: #e0e0e0;
 }
