Fixed popup showing after closed

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -107,6 +107,7 @@ body {
     display: flex;
     flex-direction: column;
     position: relative;
+    visibility: hidden;
 }
 
 #download_button {
