--- a/public/views/download.hbs
+++ b/public/views/download.hbs
@@ -6,5 +6,7 @@
 
     <body>
         <h1>This is the downloads page</h1>
+
+        <script src="../js/downloads.js"></script>
     </body>
 </html>
