--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,10 @@ body {
 }
 
 #header {
-    display: flex; 
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     background: #303030;
     flex: 1;
     align-items: center;
@@ -30,50 +33,48 @@ body {
     padding-left: 10px;
 }
 
+.headerButton {
+    height: 100%;
+    margin: 0 10px;
+    cursor: pointer;
+    transition: 0.3s;
+    display: flex;
+    align-items: center;
+}
+
+.headerButton:hover {
+    color: #c0c0c0;
+}
+
 #searchbar {
+    height: 100%;
     display: flex;
     align-items: center;
-    justify-self: stretch;
-    flex: 1;
-    height: 100%;
-}
-
-#radioButtons {
-    display: flex;
-    height: 100%;
-    justify-self: center;
-    align-items: center;
-    margin: 0 20px 0 10px;
-}
-
-#radioButtons > label {
-    margin-right: 5px;
-}
-
-.searchTable {
-    display: table-cell;
-    padding-left: 5px;
-}
-
-.searchTable label {
-    color: white;
+    justify-content: center;
 }
 
 #searchbarIcon {
-    height: 16px;
-    width: 16px;
-    margin-left: 16px;
+    fill: #fff;
+    height: 20px;
+    width: 20px;
+    margin-left: 8px;
     cursor: pointer;
+    transition: 0.3s;
+}
+
+#searchbarIcon:hover {
+    fill: #c0c0c0;
 }
 
 #searchbarContent {
+    margin-left: 16px;
+    height: 50%;
     font-size: 16px;
     padding: 0 5px;
     background: #f5f5f5;
     border-radius: 2px;
     border: 1px solid #cfcfcf;
     min-width: 400px;
-    height: 50%;
 }
 
 .main {
@@ -179,19 +180,6 @@ body {
         transform: scale(1);
         opacity: 1;
     }
-}
-
-.button {
-    padding: 10px;
-    cursor: pointer;
-    transition: 0.3s;
-    display: flex;
-    align-items: center;
-}
-
-.button:hover {
-    color: #87C3D0;
-    text-decoration: underline;
 }
 
 .form-button {
