--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -18,23 +18,19 @@
   <body id="body">
     <div class="holder">
       <div id="header">
-        <div class="button" id="home">Home</div>
-        <div class="button" onclick='location.href="downloads"' >
-          Downloads
-        </div>
-        <div class="button" id="about">About</div>
-
+        <div class="headerButton" id="home" onclick='location.href="/"'>Home</div>
+        <div class="headerButton" id="downloads" onclick='location.href="downloads"'>Downloads</div>
+        <div class="headerButton" id="about" onclick='location.href="about"'>About</div>
         <div id="searchbar">
-          <form id="Searchform" name="Search form">
-            <div class="searchTable">
-              <img id="searchbarIcon" src="../img/search_icon.png" />
-            </div>
-            <div class="searchTable">
               <input id="searchbarContent" placeholder="Search polygons by OI KEY"/>
-            </div>
-          </form>
+              <svg id="searchbarIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+                  <path
+                      d="M508.874,478.708L360.142,329.976c28.21-34.827,45.191-79.103,45.191-127.309c0-111.75-90.917-202.667-202.667-202.667
+                      S0,90.917,0,202.667s90.917,202.667,202.667,202.667c48.206,0,92.482-16.982,127.309-45.191l148.732,148.732
+                      c4.167,4.165,10.919,4.165,15.086,0l15.081-15.082C513.04,489.627,513.04,482.873,508.874,478.708z M202.667,362.667
+                      c-88.229,0-160-71.771-160-160s71.771-160,160-160s160,71.771,160,160S290.896,362.667,202.667,362.667z" />
+              </svg>
         </div>
-        <br>
       </div>
 
       <div class="main" id="main">
