Before refactored map and popup styles

--- a/public/views/download.hbs
+++ b/public/views/download.hbs
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="../css/styles.css">
 
-    </head>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css"
+    integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ=="
+    crossorigin=""/>
+    <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
+    integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
+    crossorigin=""></script>
 
-    <body>
-        <h1>This is the downloads page</h1>
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    <script type="module" src="../js/client.js"></script> 
+  </head>
 
-        <script src="../js/downloads.js"></script>
-    </body>
+  <body id="body">
+    <div class="holder">
+      <div id="header">
+        <div class="headerButton" id="home" onclick='location.href="/"'>Home</div>
+        <div class="headerButton" id="downloads" onclick='location.href="downloads"'>Downloads</div>
+        <div class="headerButton" id="about" onclick='location.href="about"'>About</div>
+        <div id="searchbar">
+              <input id="searchbarContent" placeholder="Search polygons by OI KEY"/>
+              <svg id="searchbarIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 500 500">
+                  <path
+                      d="M508.874,478.708L360.142,329.976c28.21-34.827,45.191-79.103,45.191-127.309c0-111.75-90.917-202.667-202.667-202.667
+                      S0,90.917,0,202.667s90.917,202.667,202.667,202.667c48.206,0,92.482-16.982,127.309-45.191l148.732,148.732
+                      c4.167,4.165,10.919,4.165,15.086,0l15.081-15.082C513.04,489.627,513.04,482.873,508.874,478.708z M202.667,362.667
+                      c-88.229,0-160-71.771-160-160s71.771-160,160-160s160,71.771,160,160S290.896,362.667,202.667,362.667z" />
+              </svg>
+        </div>
+      </div>
+
+      <div class="main" id="main">
+
+      </div>
+    </div>
+  </body>
 </html>
