--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,7 +22,11 @@ body {
 }
 
 #header {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
     height: 50px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -82,6 +86,7 @@ body {
     height: 100%;
     padding-left: 2.5%;
     padding-right: 2.5%;
+    margin-top: 50px;
     background: rgb(9, 71, 40);
 }
 
