--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,27 +14,15 @@ body {
     background: black;
 }
 
-.holder {
-    overflow-y: auto;
-    width: 100%;
-    height: 100%;
-    background: rgb(9, 71, 40);
-}
-
 #header {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
     height: 50px;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     background: #303030;
-    flex: 1;
     align-items: center;
     color: #FFF;
-    padding-left: 10px;
 }
 
 .headerButton {
@@ -50,11 +38,62 @@ body {
     color: #c0c0c0;
 }
 
-#searchbar {
+#main {
+    width: 100%;
     height: 100%;
+    display: flex;
+    overflow: hidden;
+}
+
+#map {
+    flex: 1;
+    height: 100%;
+}
+
+#info {
+    background: #f0f0f0;
+    max-width: 500px;
+    width: 500px;
+    overflow-y: auto;
+}
+
+#infoTitle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    margin-top: 10px;
+}
+
+.infoButton {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 10px 150px;
+    background: #fff;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: 0.3s;
+    border: 1px solid #c0c0c0;
+}
+
+.infoButton:hover {
+    background: #f0f0f0;
+}
+
+#toggleButton {
+    margin: 10px 175px;
+}
+
+#searchbar {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 40px;
+    width: 100%;
+    padding: 0 10px;
+    border: none;
+    border-bottom: 1px solid #c0c0c0;
 }
 
 #searchbarIcon {
@@ -81,129 +120,19 @@ body {
     min-width: 400px;
 }
 
-.main {
-    width: 95%;
-    height: 100%;
-    padding-left: 2.5%;
-    padding-right: 2.5%;
-    margin-top: 50px;
-    background: rgb(9, 71, 40);
-}
-
-#map {
-    width: 95%;
-    height: 80%;
-    padding: 0px;
-    margin: auto;
-    margin-bottom: 1%;
-    border: 5px solid black;
-    border-radius: 15px;
-}
-
-/* Popup */
-#popup {
-    margin: auto;
-    padding: 10px;
-    width: calc(95% - 20px);
-    background: #FFF;
-    border-radius: 15px;
-    box-shadow: 0px 0px 10px;
-    overflow-y: visible;
-    overflow-x: auto;
-    display: flex;
-    flex-direction: column;
-    position: relative;
-    visibility: hidden;
-}
-
-#download_button {
-    display: block;
-    width: 140px;
-}
-
-#close-button {
+#plot1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    border-radius: 100%;
-    font-size: 20px;
-    padding: 4px;
-    top: 8px;
-    right: 8px;
-    height: 16px;
-    width: 16px;
-    font-weight: 700;
-    cursor: pointer;
-    transition: 0.3s;
-}
-
-#close-button:hover {
-    color: #000;
-    background: #e0e0e0;
-}
-
-#plot1 {
     margin: auto;
-    height: 500px;
-    width: 500px;
+    height: 480px;
+    width: 480px;
 }
 
-#popup table {
-    border-collapse: collapse;
-    border: 2px black solid;
-    font: 12px sans-serif;
+#table {
 }
 
-#popup td {
+#info td {
     border: 1px black solid;
     padding: 5px;
-}
-
-.table-settings {
-    background: green;
-    width: 100%;
-    height: 20%;
-}
-
-#footer {
-    background: #000;
-    flex: 1;
-    height: 7%;
-}
-
-.showModal {
-    opacity: 1;
-    animation: show .2s;
-    transform: scale(1);
-}
-@keyframes show {
-    from {
-        transform: scale(0);
-        opacity: 0;
-    } to {
-        transform: scale(1);
-        opacity: 1;
-    }
-}
-
-.form-button {
-    background: #303030;
-}
-
-#table-buttons { 
-    display: flex;
-    margin-bottom: 5px;
-}
-
-#table-buttons > div {
-    cursor: pointer;
-    padding: 4px;
-    border-radius: 4px;
-    border: 0.5px solid #303030;
-    margin-right: 5px;
-    transition: 0.3s;
-}
-#table-buttons > div:hover {
-    background: #e0e0e0;
 }
