--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -32,6 +32,11 @@
           <div id="toggleButton" class="infoButton" style="visibility: hidden;">Expand Table</div>
           <div id="table"></div>
         </div>
+        <div id="hideButton">
+          <svg viewBox="0 0 63 86.6">
+              <polygon points="63 43.3 0 0 0 86.6 63 43.3" />
+          </svg>
+        </div>
       </div>
   </body>
 </html>
