Removed header temporarily

--- a/public/views/index.hbs
+++ b/public/views/index.hbs
@@ -16,11 +16,11 @@
   </head>
 
   <body id="body">
-      <div id="header">
+      {{!-- <div id="header">
         <div class="headerButton" id="home" onclick='location.href="/"'>Home</div>
         <div class="headerButton" id="downloads" onclick='location.href="downloads"'>Downloads</div>
         <div class="headerButton" id="about" onclick='location.href="about"'>About</div>
-      </div>
+      </div> --}}
 
       <div id="main">
         <div id="map" ></div>
